# flatter-rs

./: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
public/: index.scss  tailwind.minify.css
src/: app.rs  layout.rs  main.rs  properties.rs
src/db/: supabase.rs
