[package]
name = "flatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# you can check the latest version here: https://crates.io/crawasm_logger::init(wasm_logger::Config::default());tes/yew
yew = "0.19"

log = "0.4.6"
wasm-logger = "0.2.0"

gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

dotenv = "0.15.0"
postgrest = "1.3.1"